--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "form-data": "^4.0.3",
     "uuid": "^11.1.0",
     "axios": "^1.10.0"
   }
